# skill-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/skillforge/: __main__.py  cli.py  env.py  generator.py  install.py  layouts.py  models.py  prompts.py  validators.py
tests/: test_cli.py  test_env.py  test_generator.py  test_layouts.py  test_prompts.py  test_validators.py
